# sc_airpods

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: actions.yml
src/: SC_Airpods.h  SC_Airpods.mm
src/Classes/: SC_AirPods.sc
src/HelpSource/Classes/: AirPodsAcc.schelp  AirPodsEuler.schelp  AirPodsQuat.schelp  AirPodsStatus.schelp
